# GreenP

./: LICENSE  LICENSE-APACHE  README.md
compiler/: Cargo.toml  empty_statements_integration.gp  hello.gp  hello_world_integration.gp  numbers_vars_integration.gp
compiler/examples/: hello.gp  hello.green
compiler/src/: ast.rs  codegen_llvm.rs  green_optimizations.rs  lexer.rs  lib.rs  main.rs  parser.rs  semantic_analyzer.rs  token.rs  utils.rs
compiler/tests/: common.rs  integration_tests.rs  lexer_tests.rs  parser_tests.rs  semantic_analyzer_test.rs  semantic_tests.rs
