[package]
name = "greenp_compiler"
version = "0.1.0"
edition = "2021"

[lib]
name = "greenp_compiler"
path = "src/lib.rs"

[[bin]]
name = "greenp"
path = "src/main.rs"

[dependencies]
inkwell = { version = "0.4.0", features = ["llvm15-0"] } 
logos = "0.13.0"
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1.3"
tempfile = "3.3"