[package]
name = "greenp_compiler"
version = "0.1.0"
edition = "2021"

# Configuração para ter uma biblioteca e um binário
[lib]
name = "greenp" # Nome da biblioteca (pode ser o mesmo que o pacote, ou diferente)
path = "src/lib.rs"

[[bin]]
name = "greep" # Nome do executável CLI
path = "src/main.rs"

[dependencies]
inkwell = { version = "0.4.0", features = ["llvm15-0"] } # Ajuste a versão do LLVM se necessário
logos = "0.13.0"
thiserror = "1.0"

